--- a/SignalRApp/appsettings.json
+++ b/SignalRApp/appsettings.json
@@ -2,8 +2,24 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MessageBroker": {
+    "MessageBrokerConnectionString": "amqp://test.vhost:test@localhost/test.vhost",
+    "MessageBrokerType": "RabbitMq"
+  }
 }
+
+
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
